<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SaveSomeBills</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="histogram_placeholder">Histogram Placeholder</string>
    <string name="march">März</string>
    <string name="april">April</string>
    <string name="may">Mai</string>
    <string name="threshold_value">50</string>
    <string name="max_value">100</string>
    <string name="min_value">0</string>
    <string name="savings_target">Monatliches Sparziel: %1$d €</string>
    <string name="greeting">Servus!</string>
    <string name="electricity_prices_today">Happy Hours</string>
    <string name="elec_unit">cent/kWh</string>
    <string name="max_elec_value">20</string>
    <string name="high_elec_value">15</string>
    <string name="mid_elec_value">10</string>
    <string name="low_elec_value">5</string>
    <string name="cheapest_hours_label">Günstigste Zeit heute: %1$s</string>
    <string name="energy_distribution_devices">Geräteverbrauch</string>
    <string name="energy_distribution_groups">Gruppenverbrauch</string>
    <string name="category_1">Category 1</string>
    <string name="category_2">Category 2</string>
    <string name="category_3">Category 3</string>
    <string name="category_4">Category 4</string>
    <string name="others">Sonstiges</string>
    <string name="savings_target_format">Sparziel: %1$d €/Monat</string>
    <string name="settings_title">Einstellungen</string>
    <string name="settings_goal_label">Sparziel</string>
    <string name="settings_goal_suffix">€ / Monat</string>
    <string name="settings_unit_label">Anzeigeeinheit</string>
    <string name="settings_save">Speichern</string>
    <string name="info_content_description">Info</string>
    <string name="action_tips_heading">✅ Aktions-Tipps</string>
    <string name="action_tips_subtitle">Mach es – hak es ab.</string>
    <string name="btn_confirm_action">✓  Erledigt</string>
    <string name="btn_dismiss_action">✗  Überspringen</string>
</resources>
